Fix flicker and add close button

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -112,6 +112,7 @@ body>section{
     min-height          : 60vh;
     box-sizing          : border-box;
     -webkit-box-sizing  : border-box;
+    position            : relative;
 }
 
 body>section contents{
